<resources>
    <string name="app_name">다이어링</string>

    <string name="navigation_calendar">캘린더</string>
    <string name="navigation_dashboard">대시보드</string>
    <string name="navigation_mypage">마이페이지</string>
    <string name="current_date_background_description">기본배경</string>
    <string name="current_date_focus_background_description">포커스배경</string>
    <string name="sunday">일</string>
    <string name="monday">월</string>
    <string name="tuesday">화</string>
    <string name="wednesday">수</string>
    <string name="thursday">목</string>
    <string name="friday">금</string>
    <string name="saturday">토</string>
    <string name="very_good">Very Good</string>
    <string name="good">Good</string>
    <string name="fine">Fine</string>
    <string name="bad">Bad</string>
    <string name="very_bad">Very Bad</string>
    <string name="emotion_description">감정 이모지 종류</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="onboarding">앱 사용하기</string>
    <string name="onboarding_calender">캘린더</string>
    <string name="onboarding_calender_text">캘린더에서 자신의 감정들을 확인하고 날짜를 눌러 일\n기를 작성할 수 있어요.</string>
    <string name="btn_text">앱 시작하기</string>
    <string name="onboarding_diary">일기작성</string>
    <string name="onboarding_diary_text">제목, 날짜, 위치, 기분, 사진, 해시태그 등을 넣어\n일기를 작성할 수 있습니다.</string>
    <string name="onboarding_diaryview">일기보기</string>
    <string name="onboarding_diaryview_text">내가 작성한 일기를 위와 같은 화면으로 다시 확인할\n수 있습니다.</string>
    <string name="onboarding_chart">그래프</string>
    <string name="onboarding_chart_text">한달 간의 나의 기분과 날씨를 그래프를 통해 한눈에\n볼 수 있습니다.</string>
    <string name="onboarding_skip">앱 시작하기</string>

    <string name="emptyText"> </string>
    <string name="diary_save">저장하기</string>
    <string name="diary_edit">편집하기</string>
    <string name="diary_subject">제목을 입력하세요</string>
    <string name="diary_date">%1$s년 %2$s월 %3$s일</string>
    <string name="diary_place">장소를 입력하세요</string>
    <string name="diary_content">내용을 입력하세요</string>
    <string name="diary_textLength_zero"> 0 / 1000 </string>
    <string name="diary_textLength_assist"> %1$d / 1000 </string>
    <string name="diary_popup_changeImage">사진 변경</string>
    <string name="diary_popup_removeImage">사진 제거</string>
    <string name="diary_popup_deletePage">페이지 삭제</string>

    <string name="plain_year">년</string>
    <string name="year">%1$d년</string>
    <string name="month">%1$d월</string>
    <string name="day">%1$d일</string>

</resources>