<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_calendar_24"
        android:title="@string/navigation_calendar"
        app:font="@font/noto_sans_medium" />

    <item
        android:id="@+id/navigation_diary"

        android:title="일기"
        app:font="@font/noto_sans_medium" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_24"
        android:title="@string/navigation_dashboard"
        app:font="@font/noto_sans_medium" />

    <item
        android:id="@+id/navigation_mypage"
        android:icon="@drawable/ic_my_page_24"
        android:title="@string/navigation_mypage"
        app:font="@font/noto_sans_medium" />

</menu>