<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_current_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noto_sans_bold"
        android:gravity="center"
        android:textColor="@color/primary_blue"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="2022년 5월 11일" />

    <LinearLayout
        android:id="@+id/ll_day_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_current_date">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/noto_sans_medium"
            android:gravity="center"
            android:text="@string/sunday"
            android:textColor="@color/dark_grey"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/noto_sans_medium"
            android:gravity="center"
            android:text="@string/monday"
            android:textColor="@color/text_black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/noto_sans_medium"
            android:gravity="center"
            android:text="@string/tuesday"
            android:textColor="@color/text_black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/noto_sans_medium"
            android:gravity="center"
            android:text="@string/wednesday"
            android:textColor="@color/text_black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/noto_sans_medium"
            android:gravity="center"
            android:text="@string/thursday"
            android:textColor="@color/text_black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/noto_sans_medium"
            android:gravity="center"
            android:text="@string/friday"
            android:textColor="@color/text_black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/noto_sans_medium"
            android:gravity="center"
            android:text="@string/saturday"
            android:textColor="@color/dark_grey"
            android:textSize="18sp" />
    </LinearLayout>

    <View
        android:id="@+id/view_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/light_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_day_container" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_monthly_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_divider" />

</androidx.constraintlayout.widget.ConstraintLayout>