<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="date"
            type="String" />

        <variable
            name="today"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_calendar_title"
            style="@style/TextHeadline.Blue.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@{date}"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toTopOf="@id/ll_calendar_day_of_week"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="2022년 6월" />

        <ImageView
            android:id="@+id/btn_today"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="?android:attr/selectableItemBackground"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_empty_calendar_24"
            app:layout_constraintBottom_toBottomOf="@id/tv_calendar_title"
            app:layout_constraintEnd_toEndOf="@id/ll_calendar_day_of_week"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/tv_calendar_title"
            app:tint="@color/black" />

        <TextView
            style="@style/TextSubtitle2.Black.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="7dp"
            android:text="@{today}"
            app:layout_constraintBottom_toBottomOf="@id/tv_calendar_title"
            app:layout_constraintEnd_toEndOf="@id/ll_calendar_day_of_week"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/tv_calendar_title"
            tools:text="13" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.857" />

        <LinearLayout
            android:id="@+id/ll_calendar_day_of_week"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_calendar_title">

            <TextView
                android:id="@+id/tv_calendar_sunday"
                style="@style/TextSubtitle2.Grey.Normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sunday" />

            <TextView
                android:id="@+id/tv_calendar_monday"
                style="@style/TextSubtitle2.Grey.Normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/monday" />

            <TextView
                android:id="@+id/tv_calendar_tuesday"
                style="@style/TextSubtitle2.Grey.Normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tuesday" />

            <TextView
                android:id="@+id/tv_calendar_wednesday"
                style="@style/TextSubtitle2.Grey.Normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/wednesday" />

            <TextView
                android:id="@+id/tv_calendar_thursday"
                style="@style/TextSubtitle2.Grey.Normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/thursday" />

            <TextView
                android:id="@+id/tv_calendar_friday"
                style="@style/TextSubtitle2.Grey.Normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/friday" />

            <TextView
                android:id="@+id/tv_calendar_saturday"
                style="@style/TextSubtitle2.Grey.Normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/saturday" />
        </LinearLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vp_calendar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_calendar_day_of_week" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
