<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        tools:context=".presentation.onboarding.OnboardingFragment2">

        <!-- TODO: Update blank fragment layout -->
        <ImageView
            android:id="@+id/onboarding_indicator4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="150dp"
            android:layout_marginRight="150dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/indicator4"
            app:layout_constraintDimensionRatio="5:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_usingApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/onboarding"
            style="@style/TextHeadline.Black.Bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/onboarding_indicator4" />

        <ImageView
            android:id="@+id/iv_onboarding4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/onboarding_diaryview"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_usingApp" />

        <TextView
            android:id="@+id/tv_diaryview"
            style="@style/TextHeadline.Black.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/onboarding_diaryview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_onboarding4" />

        <TextView
            android:id="@+id/tv_calender_data1"
            style="@style/TextSubtitle2.Black.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/onboarding_diaryview_text"
            app:layout_constraintStart_toStartOf="@+id/tv_diaryview"
            app:layout_constraintTop_toBottomOf="@+id/tv_diaryview" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
