<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        tools:context=".presentation.onboarding.OnboardingFragment2">

        <!-- TODO: Update blank fragment layout -->
        <ImageView
            android:id="@+id/onboarding_indicator5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="150dp"
            android:layout_marginRight="150dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/indicator5"
            app:layout_constraintDimensionRatio="5:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_usingApp"
            style="@style/TextHeadline.Black.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/onboarding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/onboarding_indicator5" />

        <ImageView
            android:id="@+id/iv_onboarding5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/onboarding_chart"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_usingApp" />

        <TextView
            style="@style/TextHeadline.Black.Bold"
            android:id="@+id/tv_chart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="30dp"
            android:text="@string/onboarding_chart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_onboarding5" />

        <TextView
            android:id="@+id/tv_chart_data1"
            style="@style/TextSubtitle2.Black.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:layout_marginTop="10dp"
            android:text="@string/onboarding_chart_text"
            app:layout_constraintStart_toStartOf="@id/tv_chart"
            app:layout_constraintTop_toBottomOf="@+id/tv_chart" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
